--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,40 @@
     --color-small-info: #C1BCCC;
     font-size: 60%; 
 }
-/*subir no git hub já*/
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body{
+    height: 100vh;
+}
+
 body{
     background-color: var(--color-primary-darker);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+body,
+input,
+button,
+textarea{
+    font: 500 1.6rem Poppins;
+    color: var(--color-text-base)
+}
+
+#container{
+    width: 90vw;
+    max-width: 700px;
+}
+
+@media(min-width: 700px){
+    :root{
+        font-size: 62.5%;
+    }
+}
+/*assistir aula 04 f019*/
